ATO-1437: Use vtrList from authSession in MfaHelper